--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import '../styles/tailwind.css';
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,18 +9,10 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>DocHub — Document Catalogue</title>
 	</head>
-	<body>
+	<body class="antialiased text-slate-900 bg-gray-50">
 		<slot />
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
