chore: updated instructions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,7 +79,7 @@ const tags = Array.from(new Set(docs.flatMap(d => {
 		<section class="mt-10 info">
 		<div class="mx-auto px-12 py-12 text-center justify-center text-slate-600 info">
 			<h3>Contribute to the APEx Documentation Repository</h3>
-			<p>Have a document to contribute? <a href="#" class="text-blue-600 hover:underline">Submit it via our GitHub repository</a> and help expand the APEx Documentation Repository!</p>
+			<p class="my-5">Have a document to contribute? <a href="https://github.com/ESA-APEx/apex_document_repo" class="text-blue-600 hover:underline">Submit it via our GitHub repository</a> and help expand the APEx Documentation Repository!</p>
 			<div class="flex gap-5 mt-5 justify-center">
 				
 				<article class="card relative overflow-hidden w-1/6">
@@ -90,7 +90,7 @@ const tags = Array.from(new Set(docs.flatMap(d => {
 						</div>
 
 						<p class="text-sm text-left text-slate-600 mt-5">
-						Fork the repository and clone it to your local machine
+						Fork the <repository href="https://github.com/ESA-APEx/apex_document_repo">repository</a> and clone it to your local machine.
 						</p>
 					</div>
 
@@ -106,7 +106,7 @@ const tags = Array.from(new Set(docs.flatMap(d => {
 						</div>
 
 						<p class="text-sm text-left text-slate-600 mt-5">
-						Add your document with proper metadata in the correct category folder
+						Add your document in the <code>public/docs/[project]</code> folder and add a metadata file containing title, description, format, project, and type (optional).
 						</p>
 					</div>
 
@@ -122,7 +122,7 @@ const tags = Array.from(new Set(docs.flatMap(d => {
 						</div>
 
 						<p class="text-sm text-left text-slate-600 mt-5">
-						Create a pull request with a clear description of your contribution
+						Create a pull request with a clear description of your contribution.
 						</p>
 					</div>
 
